--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>Daily Registrations</title>
+    <title>Daily Registrations OP</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
